--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
         <title>Fashion App Demo</title>
     </head>
     <body>
-        hello world!<br />
-        <a href="page1.html">Go to page 1</a>
+        hello world!
     </body>
 </html>
