--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Fashion App Demo</title>
     </head>
     <body>
-        Hello World!
+        Hello World!<br />
+        <a href="page1.html">Go to page 1</a>
     </body>
 </html>
